Feedback from Wyverald addressed